[package]
name = "nova-psm"
version = "1.0.0"
description = "Nova Peg Stability Module"
repository = "https://github.com/nova-dot-gg/nova-psm"
license = "APGL-3"
edition = "2021"

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]

[dependencies]
arrayref = "0.3.9"
enum_dispatch = "0.3.13"
num-derive = "0.4"
num-traits = "0.2"
solana-program = "2.1.0"
spl-math = { version = "0.3", features = ["no-entrypoint"] }
spl-token = { version = "7.0", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "6.0.0", features = [ "no-entrypoint" ] }
thiserror = "2.0"
arbitrary = { version = "1.4", features = ["derive"], optional = true }
roots = { version = "0.0.8", optional = true }
shank = "0.4.3"
borsh = "1.5.7"

[dev-dependencies]
proptest = "1.6"
roots = "0.0.8"
solana-sdk = "2.1.0"
test-case = "3.3"
solana-program-test = "2.1.11"
tokio = "1.41.1"


[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
