[package]
name = "nova-psm-fuzz"
version = "0.0.1"
description = "Nova PSM Token Swap Fuzzer"
repository = "https://github.com/nova-dot-gg/nova-psm"
license = "APGL-3"
edition = "2021"
publish = false

[dependencies]
honggfuzz = { version = "0.5.56" }
arbitrary = { version = "1.4", features = ["derive"] }
solana-program = "2.1.0"
spl-math = { version = "0.3" }
spl-token = { version = "7.0", features = [ "no-entrypoint" ] }
nova-psm = { path = "..", features = ["fuzz", "no-entrypoint"] }
bincode = "1.3"

[[bin]]
name = "token-swap-instructions"
path = "src/instructions.rs"
test = false
doc = false
